# ble-angle-guide

./: README.md
firmware/: Cargo.toml  flash.sh  rust-toolchain.toml
firmware/src/: main.rs
hardware/: Snapeda.kicad_sym  ble-angle-guide.kicad_pcb  ble-angle-guide.kicad_pro  ble-angle-guide.kicad_sch  fp-lib-table  sym-lib-table
hardware/Snapeda.3dshapes/: CAP_CL05_SAM.step  CAP_CL21_SAM.step  MC3479_MEM.step  SMT_NGLFS_CNK.step
hardware/Snapeda.pretty/: BAT-HLD-012-SMT_TEC.kicad_mod  MC3479_MEM.kicad_mod  PAN1780_PAN1780FP.kicad_mod  R-668127_MIT.kicad_mod  SS1020FL.kicad_mod  SWD Contacts.kicad_mod  USB4215-03-A_REVA_GCT_USB4215-03-A_REVA.kicad_mod
ui/: development-server.py  index.html
