[package]
authors = ["Rajeev Vadhavkar"]
edition = "2018"
name = "ble-angle-guide"
version = "1.0.0"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt"]}
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }
embedded-hal = { version = "1.0.0" }
futures = { version = "0.3.30", default-features = false }
nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "s140", "nrf52840", "ble-gatt-server", "defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
